@@ -38,3 +38,4 @@ plugins.zm_theme_switch.version = 0.1.1
 plugins.zm_settings.version = 0.1.0
 plugins.zm_toggle_zm_themes.version = 0.1.0
 plugins.zm_snap_affiliates.version = 0.1.0
+plugins.zm_surcharge.version = 0.1.0
