@@ -1,0 +1,17 @@
+Surcharge order total plugin
+
+
+Installation
+============
+1) Unzip this plugin into the zenmagick/plugins directory.
+2) Install plugin using the ZenMagick Plugin Manager.
+3) Make sure the Zen Cart order total module ot_zenmagick is installed and enabled.
+3) Enjoy
+
+
+Usage
+=====
+Under the Plugins menu there should be a new entry surcharge setup. The setup page allows to
+add/remove rules for surcharges on shopping carts.
+Some knowledge of regular expression does help, however in the simplest case the regexp. field can
+be treated like a string search.
